# maxent

./: CONTRIBUTING.md  Dockerfile
doc/: documentation.rst  install.rst  versions.rst
doc/reference/: matrix_functions.rst
python/: __init__.py  default_models.py  functions.py  matrix_functions.py  maxent_loop.py  maxent_result.py
python/analyzers/: analyzer.py  linefit_analyzer.py
python/cost_functions/: maxent_cost_function.py
python/plot/: jupyter_plot_maxent.py  plot_maxent.py
test/: CMakeLists.txt  check_autopep8.sh
test/general/: CMakeLists.txt  srvo3_mesh_and_ALPS.py  srvo3_mesh_and_ALPS.ref.h5  tau_maxent_off.py
test/python/: CMakeLists.txt  elementwise_maxent.py  matrix_A.py  matrix_A_complex.py
test/triqs/: CMakeLists.txt  matplotlibrc
